fix mobile header overlap issue

--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -2,7 +2,6 @@
   background-color: $c-background;
 
   &__content {
-    position: relative;
     display: flex;
     height: 100vh;
     height: 100svh;
@@ -24,8 +23,8 @@
   &__middle {
     @include page-grid;
 
+    height: calc(100% - 127px);
     grid-template-rows: repeat(2, 1fr);
-    height: 100%;
   }
 
   &__date {
@@ -95,18 +94,15 @@
   }
 }
 
-.temp {
+.header__main-content-wrapper {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
   grid-column: 1 / -1;
 
   @include on-desktop {
     grid-column: 1 / 7;
     grid-row: 1 / 3;
   }
-}
-
-.header__main-content-wrapper {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-between;
 }
